--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div class="lg:w-1/2 mt-8 lg:mt-0">
-                    <img src="../assets/screen.jpg" alt="Illustration representing digital accessibility for everyone" class="max-w-full h-auto mx-auto">
+                    <img src="assets/screen.jpg" alt="Illustration representing digital accessibility for everyone" class="max-w-full h-auto mx-auto">
                 </div>
             </div>
         </section>
