--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
     <main>
         <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-3 sm:py-16 lg:py-2">
             <div class="flex flex-col-reverse lg:flex-row items-center justify-between">
-                <div class="lg:w-1/2 mb-8 lg:mb-0">
+                <div class="lg:w-1/2 mb-8 lg:mb-0 lg:text-start text-center lg:pt-0 pt-10">
                     <h1 class="text-4xl sm:text-5xl lg:text-7xl font-bold tracking-wider leading-tight mb-6">
                         Let's Build for <span class="gradient-text">Everyone</span>
                     </h1>
@@ -73,13 +73,13 @@
                         We believe being disabled shouldn't stop anyone from digital experiences.
                     </h2>
                     <div class="flex space-x-4">
-                        <button class="px-6 py-3 tracking-widest text-lg sm:text-xl lg:text-2xl bg-primary-yellow text-black hover:bg-[#d4a018] rounded-md flex items-center transition duration-300 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-yellow" aria-label="Book a Call">
+                        <button class="px-6 lg:mx-0 mx-auto py-3 tracking-widest text-lg sm:text-xl lg:text-2xl bg-primary-yellow text-black hover:bg-[#d4a018] rounded-md flex items-center transition duration-300 ease-in-out focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-yellow" aria-label="Book a Call">
                             <i class="fa-solid fa-phone pe-2" aria-hidden="true"></i>
                             Book a Call
                         </button>
                     </div>
                 </div>
-                <div class="lg:w-1/2 mt-8 lg:mt-0">
+                <div class="lg:w-1/2 mt-8 lg:mt-0 lg:block hidden">
                     <img src="assets/screen.jpg" alt="Illustration representing digital accessibility for everyone" class="max-w-full h-auto mx-auto">
                 </div>
             </div>
